# onigiri-server

./: .gitignore  404.html  Cargo.toml  README.md  Rocket.toml  index.html  justfile  print.html  searchindex.js  searchindex.json
.github/workflows/: build.yml  deploy.yml
arch/: index.html
book/: book.toml
book/src/: README.md  SUMMARY.md
book/src/arch/: README.md
book/src/device/: README.md
book/src/sdk/: README.md
device/: index.html
onigiri_sdk/: Cargo.toml
onigiri_sdk/src/: api.rs  client.rs  lib.rs  models.rs  runtime.rs
onigiri_server/: Cargo.toml  Dockerfile  docker-compose.yaml
onigiri_server/src/: main.rs  settings.rs
onigiri_server/src/api/: guards.rs  handlers.rs  mod.rs
onigiri_server/src/api/v1beta/: auth.rs  device.rs  mod.rs
onigiri_server/src/db/: mod.rs
onigiri_server/src/utils/: apikey.rs  mod.rs  state.rs
onigiri_types/: Cargo.toml
onigiri_types/src/api/: v1beta.rs
onigiri_types/src/db/: mod.rs
sdk/: index.html
src/: main.rs  utils.rs
src/api/: handlers.rs  mod.rs
src/api/v1beta/: auth.rs  device.rs  mod.rs
src/db/: mod.rs  models.rs
