[package]
name = "onigiri_server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["kugelblitz2", "MrPicklePinosaur"]
description = ""
repository = "https://github.com/KaratsubaLabs/onigiri-server"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
anyhow = "1"
