[package]
name = "onigiri_sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["kugelblitz2", "MrPicklePinosaur"]
description = ""
repository = "https://github.com/KaratsubaLabs/onigiri-server"

[lib]

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
anyhow = "1"
thiserror ="1"

onigiri_types = { path = "../onigiri_types" }
