[package]
name = "onigiri_types"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["kugelblitz2", "MrPicklePinosaur"]
description = ""
repository = "https://github.com/KaratsubaLabs/onigiri-server"

[lib]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
thiserror ="1"

pino_utils = { git = "https://github.com/MrPicklePinosaur/pino_utils" }
